+fix: alignement des deux élément du haut du login (le button retour et le text)

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -4145,9 +4145,8 @@ html {
             border-radius: 16px;
             border: 1px solid rgba(255, 255, 255, 0.10);
             background: rgba(255, 255, 255, 0.05);
-            padding: 13px;
+            padding: 12px 0;
             width: 100%;
-            height: 15px;
             p {
               display: flex;
               justify-content: center;
